--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-
 log = { version = "0.4", default-features = false }
 esp-idf-svc = { version = "0.49", default-features = false }
 embedded-svc = "0.28.0"
+esp-idf-sys = "0.35.0"
 
 [build-dependencies]
 embuild = "0.32.0"
